# fungi-cazyme-PLM

./: .gitattributes  .gitignore  CHANGELOG.md  Makefile  README.md  project.md  project_design.md  pyproject.toml
configs/: data_sources.example.yaml  logging.yaml  phase0.yaml
configs/models/: esmc.example.yaml
data/manifests/: source_catalog.tsv
docs/: 00_phase0_decision_memo.md  01_data_inventory.md  decisions.md  esmc_2026_integration_report_zh.md  limitations.md  remote_execution_met.md
docs/legacy/: aim2_reuse.md
docs/process/: 2026-07-20_223631_phase0-report_20260720T223631843778Z_f4a32c6e_fcplm-report-phase0---config-configs.md  2026-07-20_223706_phase0-report_20260720T223706152673Z_f4a32c6e_fcplm-report-phase0---config-configs.md  2026-07-20_223947_phase0-report_20260720T223947140648Z_f4a32c6e_fcplm-report-phase0---config-configs.md  2026-07-20_phase0-initial-audit.md  README.md
envs/: base.yaml
schemas/: artifact_manifest.schema.json  domains.schema.yaml  gap_cases.schema.yaml  model_artifact_manifest.schema.json  protein_alias_conflicts.schema.yaml  protein_aliases.schema.yaml  proteins.schema.yaml  run_manifest.schema.json
scripts/: README.md  translate_markdown_zh_en.py
scripts/remote/: met_run.sh
scripts/report/: render_esmc_report.py
src/fungi_cazyme_plm/: __init__.py  cli.py  config.py  errors.py  provenance.py  tableio.py
tests/fixtures/: cazy_2024.faa  cazy_2025.faa  cazyme3d.faa  config.yaml  dbcan_current.hmm  fam-substrate.tsv  mycocosm_latin1.csv
tests/integration/: test_smoke.py
tests/unit/: test_alias_conflicts.py  (+7 more)
(+19 files in other folders)
